# amazon-research-tool

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  ENGINEERING-SPEC.md  OPS-RECURRING.md  PM2-FIX-NETWORK.md  POSTGRES-CONNECTION.md  README.md  SERVER-AUDIT.md  START-SERVICE.md  UPLOAD-GUIDE.md  VPS-READINESS-CHECKLIST.md  package-lock.json  package.json  playwright-headless-test.js  pyproject.toml  requirements.txt  restart_platform.sh  server.js  setup-after-upload.sh
config/: amazon-research.service.example  amazon-research.timer.example  cron.example
deploy/: DEPLOYMENT_HARDENING.md  amazon-research.service
docs/: FINAL_READINESS_REVIEW.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
internal_ui/: alert-center.html  portfolio.html  settings.html  workflow.html  workspace-analytics.js  workspace-creation.html  workspace-feature-flags.js  workspace-overview.html  workspace-preferences.html  workspace-shared.css
scripts/: check_vps_readiness.sh  opportunity_analytics_layer_smoke.py  pipeline_discovery_to_opportunity_smoke.py  research_intelligence_layer_smoke.py  research_workspace_system_smoke.py  run_scheduler_once.py  run_schema.py  serve_health.py  serve_internal_api.py  startup_sanity_check.py  step100_research_platform_review.py  step101_bsr_history_engine_smoke.py  step102_trend_persistence_smoke.py  step103_cluster_cache_smoke.py  step104_discovery_result_storage_smoke.py  step105_advanced_keyword_expansion_smoke.py  step111_telemetry_layer_smoke.py  (+236 more)
(+406 files in other folders)
